--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "PORT=3006 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "eslintConfig": {
     "extends": [
@@ -45,9 +46,15 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.8",
+    "@graphql-codegen/introspection": "1.18.2",
     "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-operations": "1.18.4",
     "@graphql-codegen/typescript-react-apollo": "2.3.1",
-    "@graphql-codegen/introspection": "1.18.2"
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   }
 }
