--- a/codegen.yml
+++ b/codegen.yml
@@ -1,3 +1,6 @@
+hooks:
+  afterAllFileWrite:
+    - prettier --write
 overwrite: true
 schema: "http://localhost:3000/graphql"
 documents: "src/**/*.{ts,tsx}"
