--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "@types/classnames": "^2.3.1",
     "@types/react-dom": "^17.0.9",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
     "chartist": "0.10.1",
-    "classnames": "2.2.6",
+    "classnames": "^2.3.1",
     "graphql": "^15.5.1",
     "history": "5.0.0",
     "next": "11.0.1",
