--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.3",
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "@types/classnames": "^2.3.1",
     "@types/react-dom": "^17.0.9",
@@ -20,6 +22,11 @@
     "@zeit/next-sass": "1.0.1",
     "chartist": "0.10.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.23.0",
+    "formik": "^2.2.9",
+    "formik-material-ui": "^3.0.1",
+    "formik-material-ui-lab": "^0.0.8",
+    "formik-material-ui-pickers": "^0.0.12",
     "graphql": "^15.5.1",
     "history": "5.0.0",
     "next": "11.0.1",
