--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik-material-ui-pickers": "^0.0.12",
     "graphql": "^15.5.1",
     "history": "5.0.0",
+    "js-cookie": "^2.2.7",
     "next": "11.0.1",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.3.1",
@@ -47,6 +48,7 @@
     "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-operations": "1.18.4",
     "@graphql-codegen/typescript-react-apollo": "2.3.1",
+    "@types/js-cookie": "^2.2.7",
     "@types/react": "17.0.15",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
