--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/classnames": "^2.3.1",
     "@types/react-dom": "^17.0.9",
     "@zeit/next-css": "1.0.1",
@@ -29,7 +30,7 @@
     "formik-material-ui-pickers": "^0.0.12",
     "graphql": "^15.5.1",
     "history": "5.0.0",
-    "js-cookie": "^2.2.7",
+    "js-cookie": "^2.2.1",
     "next": "11.0.1",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.3.1",
