--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "next": "11.0.1",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.3.1",
+    "next-redux-wrapper": "^7.0.2",
     "path": "0.12.7",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-chartist": "0.14.3",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-swipeable-views": "0.13.9",
     "styled-components": "^5.3.0"
   },
