--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/js-cookie": "^2.2.7",
     "@types/react": "17.0.15",
     "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "7.32.0",
