--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^17.0.9",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
+    "antd": "^4.16.11",
     "chartist": "0.10.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
@@ -43,6 +44,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-swipeable-views": "0.13.9",
+    "sass": "^1.37.5",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -51,6 +53,7 @@
     "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-operations": "1.18.4",
     "@graphql-codegen/typescript-react-apollo": "2.3.1",
+    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/js-cookie": "^2.2.7",
     "@types/react": "17.0.15",
     "@types/react-router-dom": "^5.1.8",
@@ -61,6 +64,7 @@
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "hoist-non-react-statics": "^3.3.2",
     "prettier": "^2.3.2",
     "typescript": "4.3.5"
   }
