--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-redux": "^7.2.4",
     "react-swipeable-views": "0.13.9",
     "sass": "^1.37.5",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.8",
