--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@date-io/date-fns": "1.x",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/classnames": "^2.3.1",
+    "@types/nprogress": "^0.2.0",
     "@types/react-dom": "^17.0.9",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-sass": "1.0.1",
@@ -33,6 +34,7 @@
     "next-compose-plugins": "2.2.1",
     "next-images": "1.3.1",
     "next-redux-wrapper": "^7.0.2",
+    "nprogress": "^0.2.0",
     "path": "0.12.7",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
