--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.4.3",
     "@date-io/date-fns": "1.x",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/classnames": "^2.3.1",
     "@types/nprogress": "^0.2.0",
